<resources>
    <string name="app_name">Save My Stuff</string>
    <string name="notes">My Stuff</string>
    <string name="notes_title">Item Name</string>
    <string name="notes_sub_title">Date of Purchase</string>
    <string name="notes_desc">Extra info e.g. location of item’s documents</string>
    <string name="web_url">Enter Google Drive or Youtube Url</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="storage_permission_text">This app needs access to your storage.</string>
    <string name="search">Search your stuff</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="text"><font color="#07056">Don\'t have an account?</font> <font
        color="#076685">Sign Up</font></string>

    <string name="text2"><font color="#07056">Already have an account?</font> <font
        color="#076685">Sign In</font></string>
</resources>